--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
         }
     ],
     "require": {
-        "php": ">=5.4.*"
+        "php": ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.1",
+        "phpunit/phpunit": "~4.1"
     },
     "autoload": {
         "psr-4": {
