--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4.0",
+        "illuminate/console": "~5.0",
+        "illuminate/support": "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1"
