L5.1, Gateway callback support and updates
Lock composer to use higher PHP, project now is set to be used with
laravel 5.1. Callback support added for gateways, callback tested.
Readme updated.

--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,10 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.5.9",
         "illuminate/console": "~5.0",
-        "illuminate/support": "~5.0"
+        "illuminate/support": "~5.0",
+        "amsgames/laravel-shop-gateway-paypal": "v1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
